--- a/practico2/practico2.ipynb
+++ b/practico2/practico2.ipynb
@@ -139,6 +139,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# petroMag y modelMag por N-esima vez\n",
+    "Fuentes:\n",
+    "- <a href=\"https://skyserver.sdss.org/dr7/en/help/docs/algorithm.asp?key=mag_petro\">Petro</a>\n",
+    "- <a href=\"https://www.sdss4.org/dr17/algorithms/magnitudes/\">general</a>\n",
+    "\n",
+    "- *There are several \"model\" magnitudes associated with each catalog object. First, there are devMag and expMag magnitudes, associated with de Vaucouleurs and exponential model fits, as explained more fully below. These magnitudes are calculated from independent models in each band.*\n",
+    "\n",
+    "- *Second, there is modelMag, which uses the better of the two fits in the r-band as a matched aperture to calculate the flux in all bands. For extended objects, modelMag usually provides the best available SDSS colors.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Practico 2 \n",
     "## Pasos\n",
     "\n",
